<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_general_padding"
    tools:context=".views.GuestFormActivity">

    <TextView
        style="@style/textLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome" />

    <EditText
        android:id="@+id/edit_name"
        style="@style/textEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName" />

    <TextView
        style="@style/textLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/documento" />

    <EditText
        android:id="@+id/edit_document"
        style="@style/textEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/textLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/confirmacao" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radio_not_confirmed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nao_confirmado" />

        <RadioButton
            android:id="@+id/radio_present"
            android:textColor="@color/colorTextPresent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/presente" />

        <RadioButton
            android:id="@+id/radio_absent"
            android:textColor="@color/colorTextAbsent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ausente" />
    </RadioGroup>

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="@drawable/round_btn_linear_green"
        android:textStyle="bold"
        android:textColor="@color/colorTextButton"
        android:text="@string/salvar" />

</LinearLayout>