<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.AllInvitedFragment">

    <LinearLayout
        android:id="@+id/linear_dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/presentes"
                android:textColor="@color/colorTextPresent"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/ausentes"
                android:textColor="@color/colorTextAbsent"
                android:textStyle="bold" />
            />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/totais"
                android:textColor="@color/colorTextTotal"
                android:textStyle="bold" />
            />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_present_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/presentes"
                android:textColor="@color/colorTextPresent"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/text_absent_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/ausentes"
                android:textColor="@color/colorTextAbsent"
                android:textSize="25sp" />
            />

            <TextView
                android:id="@+id/text_all_invited_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/totais"
                android:textColor="@color/colorTextTotal"
                android:textSize="25sp" />
            />


        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/layout_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/linear_dashboard"
        android:layout_margin="10dp"
        android:background="@color/colorPrimary"/>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_all_invited"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout_divider" />


</RelativeLayout>